[package]
name = "performace_test_rust"
version = "0.1.0"
authors = ["guillermopriego"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
rand = "0.7.2"
futures = "0.1"
regex = "1.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"